fix: description alignment

--- a/src/app/[locale]/Welcome.module.css
+++ b/src/app/[locale]/Welcome.module.css
@@ -29,6 +29,7 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .title {
